--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,8 +6,9 @@
     <title>My Money App</title>
     <link rel='stylesheet' href='app.css'>
   </head>
-  <body class='skin-blue fixed sidebar-mini'>
-    <div id='app'></div>
-    <script src='app.js'></script>
-  </body>
+  <!-- <body class='skin-blue fixed sidebar-mini'> -->
+    <body class='skin-blue sidebar-mini'>
+      <div id='app' class='wrapper'></div>
+      <script src='app.js'></script>
+    </body>
 </html>
